--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
     "redux-thunk": "^2.3.0",
+    "schema-inspector": "^2.0.0",
     "source-map-explorer": "^2.5.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
