--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "firebase": "^8.2.1",
     "formik": "^2.2.6",
     "gsap": "^3.6.0",
