update since last time hre

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WebBase",
-  "name": "WebBase Boilerplate - StatonFoundation",
+  "short_name": "Dylights",
+  "name": "Dylights",
   "icons": [
     {
       "src": "favicon.ico",
